tests/snapshots/run_wpt_conformance__coreml_conv2d_default___clamp.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "subgraph.https.any.js",
    "conv2d default + clamp",
    "coreml",
    "PASS",
)
