tests/snapshots/run_wpt_conformance__coreml_conv2d_default___prelu.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
subgraph.https.any.js conv2d default + prelu, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type prelu: Param 'alpha' must be const

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    conv2dFilter: f32[1, 1, 3, 3];
    conv2dInput: f32[1, 1, 5, 5];
    preluSlope: f32[1, 1, 3, 3];
  }

  nodes {
    [operand_3] = conv2d(conv2dInput, conv2dFilter, bias=null, dilations=[], filterLayout="", groups=1, inputLayout="", label="", padding=[], strides=[]);
    [output] = prelu(operand_3, preluSlope, label="");
  }

  outputs { output; }
}
